--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,7 @@ li {
 }
 
 .home-scroll-container {
+  width: 101%;
   overflow-y: scroll;
   scroll-snap-type: y proximity;
   scroll-behavior: smooth;
