--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ li {
 
 /* ---------- Home ---------- */
 .home {
-  width: 100%;
+  width: 100vw;
   height: auto;
   display: flex;
   justify-content: center;
@@ -125,11 +125,6 @@ li {
   padding: 120px 0px 50px;
   position: relative;
   scroll-snap-stop: start;
-}
-
-.home-section {
-  width: 100%;
-  height: auto;
 }
 
 .home-cover-img {
@@ -141,10 +136,17 @@ li {
 
 .home-scroll-container {
   width: 103%;
+  height: auto;
   overflow-y: scroll;
+  overflow-x: hidden;
   scroll-snap-type: y proximity;
   scroll-behavior: smooth;
   scroll-snap-stop: start;
+}
+
+.home-section {
+  width: 100%;
+  height: auto;
 }
 
 /* ---------- About Us ---------- */
@@ -167,7 +169,7 @@ li {
   object-fit: contain;
   width: 100%;
   height: 650px;
-  background-image: url("https://github.com/puliv/AhoraNosotras/blob/master/src/assets/img/IMAGEN_1.1.png?raw=true");
+  /* background-image: url("https://github.com/puliv/AhoraNosotras/blob/master/src/assets/img/IMAGEN_1.1.png?raw=true"); */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
