--- a/src/App.css
+++ b/src/App.css
@@ -887,6 +887,10 @@ li {
   color: #f6f6f6;
 }
 
+.subscribe-span.item {
+  color: #d969d9;
+}
+
 .subscribe-h2 {
   font-weight: bold;
   font-size: 2em;
@@ -1000,7 +1004,7 @@ li {
 
 /* ------------------------ Media Queries ------------------------ */
 
-@media only screen and (max-width: 1250px) {
+@media only screen and (max-width: 1000px) {
   .App {
     display: none;
   }
