--- a/src/App.css
+++ b/src/App.css
@@ -725,6 +725,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 40px;
 }
 
 .profile-img-flower.right {
@@ -735,7 +736,7 @@ li {
 }
 
 .profile-img-flower.left {
-  margin-top: 12vw;
+  margin-top: 10vw;
   transform: scaleX(-1);
   object-fit: cover;
   width: 12vw;
@@ -795,7 +796,7 @@ li {
   display: flex;
   flex-direction: column;
 
-  transition: opacity 0.6s, visibility 0.2s;
+  transition: opacity 0.7s, visibility 0.2s;
 }
 
 .roll_one {
@@ -812,7 +813,6 @@ li {
 
 .roll_two {
   font-size: 15px;
-  font-weight: lighter;
   text-align: left;
   color: #f6f6f6;
   height: 100%;
