--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ li {
 
 /* ---------- Home ---------- */
 .home {
-  width: 100vw;
+  width: 103vw;
   height: auto;
   display: flex;
   justify-content: center;
@@ -151,7 +151,7 @@ li {
 
 /* ---------- About Us ---------- */
 .about-us-container {
-  width: 100%;
+  width: 103vw;
   height: auto;
   background-color: #f6f6f6;
 }
@@ -502,7 +502,7 @@ li {
 
 /* ---------- Learning ---------- */
 .learning {
-  width: 100%;
+  width: 103vw;
   height: auto;
   background-color: #f6f6f6;
   display: flex;
@@ -710,38 +710,7 @@ li {
   width: 100%;
   height: auto;
   background-color: #f6f6f6;
-}
-
-.profile-main {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.profile-center {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding-top: 40px;
-}
-
-.profile-img-flower.right {
-  width: 12vw;
-  object-fit: cover;
-  object-position: 5vw 0;
-  height: 500px;
-}
-
-.profile-img-flower.left {
-  margin-top: 10vw;
-  transform: scaleX(-1);
-  object-fit: cover;
-  width: 12vw;
-  object-position: 4vw 0;
-  height: 500px;
 }
 
 .profile-header {
@@ -753,8 +722,8 @@ li {
   width: 100%;
   height: 70%;
   display: flex;
-  margin-top: 50px;
   justify-content: space-evenly;
+  padding: 30px 100px 0px;
 }
 
 .profile-div-text {
