--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,19 @@ li {
   cursor: pointer;
 }
 
+.home-infography {
+  margin: 60px 0px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-info-img {
+  width: 60%;
+  height: auto;
+  margin-left: 100px;
+}
+
 .home-scroll-container {
   width: 103%;
   height: auto;
@@ -153,7 +166,6 @@ li {
 .about-us-container {
   width: 103vw;
   height: auto;
-  background-color: #f6f6f6;
 }
 
 .about-us {
@@ -194,7 +206,7 @@ li {
 }
 
 .about-us-img {
-  padding: 0px 20vw;
+  padding: 0px 20vw 0px 25vw;
   width: 100%;
   height: auto;
 }
@@ -272,8 +284,9 @@ li {
 
 /* ---------- Magazine ---------- */
 .magazine {
-  width: 100%;
-  padding: 40px 0px;
+  width: 103vw;
+  padding: 80px 0px 0px;
+  margin-bottom: 50px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -281,18 +294,14 @@ li {
 }
 
 .mag-top {
-  width: 100%;
+  width: 103vw;
   height: auto;
   display: flex;
-  padding: 50px 17vw;
+  padding: 0px 15vw;
   justify-content: center;
   background-color: #f6f6f6;
-}
-
-.mag-scroll {
-  width: 100%;
-  height: 515px;
-  background-color: #f6f6f6;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .mag-scroll-active {
@@ -301,13 +310,9 @@ li {
 
 .mag-scroll-row-top {
   width: 100%;
-  height: 515px;
+  height: 600px;
   display: flex;
   justify-content: space-between;
-}
-
-.mag-scroll-row-top-active {
-  overflow: scroll;
 }
 
 .mag-scroll-left,
@@ -318,11 +323,12 @@ li {
 
 .mag-scroll-right {
   overflow: scroll;
+  height: 585px;
 }
 
 .mag-img-cover-div {
   display: flex;
-  width: 390px;
+  width: 450px;
   height: auto;
   box-shadow: 0px 6px 6px #00000028;
 }
@@ -450,7 +456,7 @@ li {
   width: 100%;
   height: 100%;
   padding: 10px 5px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   box-shadow: 0px 6px 6px #00000028;
 }
 
@@ -490,7 +496,13 @@ li {
   color: #630164;
   font-family: Open Sans;
   font-weight: bold;
-  margin: 50px 0px 20px;
+  margin: 50px 0px 10px;
+}
+
+.mag-hist-h3 {
+  color: #630164;
+  font-family: Open Sans;
+  margin-bottom: 20px;
 }
 
 .mag-hist-span {
@@ -709,7 +721,6 @@ li {
 .profile {
   width: 100%;
   height: auto;
-  background-color: #f6f6f6;
   padding-top: 40px;
 }
 
@@ -723,7 +734,7 @@ li {
   height: 70%;
   display: flex;
   justify-content: space-evenly;
-  padding: 30px 100px 0px;
+  padding: 30px 110px 0px;
 }
 
 .profile-div-text {
@@ -835,14 +846,14 @@ li {
 .subscribe {
   background-color: #1a1a1a;
   bottom: auto;
-  width: 100%;
+  width: 103vw;
   height: auto;
-  padding-top: 10px;
+  padding-top: 60px;
 }
 
 .subscribe-div-alert {
   height: 40px;
-  width: 100%;
+  width: 103vw;
   display: flex;
   justify-content: center;
 }
@@ -894,7 +905,7 @@ li {
 }
 
 .subscribe-form {
-  padding: 20px 22vw;
+  padding: 20px 22vw 0px;
   display: flex;
   flex-direction: column;
 }
