--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,6 @@ li {
 .about-us {
   width: 100%;
   height: auto;
-  font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -216,6 +215,14 @@ li {
   padding: 100px 0px;
 }
 
+.about-us-h2 {
+  font-family: "Roboto", sans-serif;
+}
+
+.about-us-span {
+  font-family: "Open Sans";
+}
+
 .about-us-h2,
 .about-us-span {
   display: flex;
@@ -257,6 +264,7 @@ li {
 }
 
 .about-us-li {
+  font-family: "Open Sans";
   width: 100%;
   height: 60px;
   border: solid #630164 0.5px;
@@ -266,13 +274,32 @@ li {
   align-items: center;
 }
 
-.about-us-span-date {
+.about-us-span-container {
   width: 10%;
   height: 100%;
   background-color: #630164;
+  padding: 0px 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about-us-span-date {
+  width: 100%;
+  height: 50%;
+  background-color: #630164;
   color: #f6f6f6;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.about-us-span-year {
+  width: 100%;
+  height: 50%;
+  color: #f6f6f6;
+  display: flex;
   justify-content: center;
 }
 
@@ -355,6 +382,7 @@ li {
 .mag-ver-div-col.right {
   padding-left: 5px;
 }
+
 .mag-ver-div-col.left {
   padding-right: 5px;
 }
@@ -759,10 +787,10 @@ li {
 
 .profile-span {
   color: #4d4d4d;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 400;
   text-align: center;
-  font-family: Open Sans;
+  font-family: 'Roboto';
 }
 
 .profile-span-hover {
