--- a/src/App.css
+++ b/src/App.css
@@ -492,8 +492,8 @@ li {
   width: 100%;
   height: 100%;
   padding: 10px 5px;
-  /* margin-bottom: 10px; */
   box-shadow: 0px 6px 6px #00000028;
+  cursor: pointer;
 }
 
 .mag-backcover-img {
@@ -505,10 +505,17 @@ li {
   display: none;
 }
 
-.mag-h2.historicas {
+.mag-h2-historicas {
   display: flex;
   justify-content: center;
-  cursor: pointer;
+  padding-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: Open Sans;
+  color: #630164;
+  line-height: 1;
+  background-color: #f6f6f6;
+  box-shadow: 0px 6px 6px #00000028;
 }
 
 .historical-section {
