--- a/src/App.css
+++ b/src/App.css
@@ -183,9 +183,9 @@ li {
 }
 
 .about-us-title-logo {
-  width: 100px;
-  height: auto;
-  background-color: #630164;
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
   display: flex;
   justify-content: center;
 }
@@ -204,8 +204,9 @@ li {
 }
 
 .about-us-flower {
-  width: 25vw;
-  object-position: -2px 0px;
+  width: 20vw;
+  height: auto;
+  object-position: -1px 0px;
 }
 
 .about-us-flower.right {
@@ -220,7 +221,9 @@ li {
 
 .about-us-text {
   position: relative;
-  padding: 100px 0px;
+  padding: 50px 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 .about-us-h2 {
@@ -237,8 +240,14 @@ li {
   justify-content: center;
 }
 
-.about-us-span.us {
+.about-us-span-us {
   text-align: justify !important;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: "Open Sans";
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .about-us-h2,
@@ -805,7 +814,7 @@ li {
   font-size: 20px;
   font-weight: 400;
   text-align: center;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 .profile-span-hover {
@@ -887,24 +896,33 @@ li {
 
 /* ---------- Subscribe ---------- */
 .subscribe {
-  background-color: #1a1a1a;
   bottom: auto;
   width: 103vw;
   height: auto;
   padding-top: 60px;
 }
 
+/* .subscribe-active {
+  padding-top: 60px;
+} */
+
 .subscribe-div-alert {
-  height: 40px;
+  display: none;
+}
+
+.subscribe-div-alert-active {
+  height: 60px;
   width: 103vw;
+  display: block;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .subscribe-span-alert {
-  padding-top: 10px;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
+  font-size: 15px;
 }
 
 .alert-success {
@@ -926,6 +944,7 @@ li {
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: #1a1a1a;
 }
 
 .subscribe-h2,
@@ -951,6 +970,7 @@ li {
   padding: 20px 22vw 0px;
   display: flex;
   flex-direction: column;
+  background-color: #1a1a1a;
 }
 
 .ant-form-item {
