--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -1,6 +1,5 @@
 @import "~antd/dist/antd.css";
 
-
 /* ---------- Section's Headers ---------- */
 
 .section {
@@ -50,6 +49,21 @@
   object-fit: cover;
 }
 
+.section-div-span {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 0px;
+}
+
+.section-span {
+  color: #000000;
+  font-size: 18px;
+  padding: 10px 0px;
+  text-align: justify;
+  font-family: "Roboto", sans-serif;
+}
 
 /* ---------- Editorial ---------- */
 .edit-top {
@@ -569,14 +583,11 @@
   justify-content: center;
 }
 
-
 .historicas-img {
   width: 500px;
   height: auto;
   object-fit: scale-down;
 }
-
-
 
 /* ---------- ReadNext ---------- */
 .read-next {
