--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -24,19 +24,20 @@
 }
 
 .section-h2 {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
   font-size: 20px;
-  color: #707070;
-  font-family: Open Sans;
-  font-weight: bold;
-  margin-bottom: 20px;
+  color: #4d4d4d;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .section-h3 {
-  color: #4d4d4d;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  display: flex;
-  justify-content: flex-end;
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-family: Open Sans;
+  font-weight: bold;
+  color: #707070;
 }
 
 .section-img-div {
