--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import "~antd/dist/antd.css";
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* ---------- App ---------- */
 
 .App {
@@ -89,7 +89,8 @@ li {
 }
 
 .drawer-h3 {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto',
+    sans-serif;
   color: #f6f6f6;
   padding: 20px 0px 3px;
   cursor: pointer;
@@ -215,7 +216,8 @@ li {
 }
 
 .about-us-span {
-  font-family: "Open Sans";
+  font-family: 'Open Sans',
+    sans-serif;
 }
 
 .about-us-h2,
@@ -228,7 +230,8 @@ li {
   text-align: justify !important;
   padding-left: 250px;
   padding-right: 250px;
-  font-family: "Open Sans";
+  font-family: 'Open Sans',
+    sans-serif;
   display: flex;
   justify-content: center;
   font-size: 20px;
@@ -265,7 +268,8 @@ li {
 }
 
 .about-us-li {
-  font-family: "Open Sans";
+  font-family: 'Open Sans',
+    sans-serif;
   width: 100%;
   height: 60px;
   border: solid #630164 0.5px;
@@ -430,7 +434,8 @@ li {
   align-items: center;
   font-size: 18px;
   font-weight: bold;
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   color: #630164;
   line-height: 1;
 }
@@ -504,7 +509,8 @@ li {
   padding-bottom: 10px;
   font-size: 18px;
   font-weight: bold;
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   color: #630164;
   line-height: 1;
   background-color: #f6f6f6;
@@ -530,20 +536,23 @@ li {
 
 .mag-hist-h2 {
   color: #630164;
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   font-weight: bold;
   margin: 50px 0px 10px;
 }
 
 .mag-hist-h3 {
   color: #630164;
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   margin-bottom: 20px;
 }
 
 .mag-hist-span {
   color: #630164;
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   margin-bottom: 20px;
   text-align: justify;
 }
@@ -776,7 +785,7 @@ li {
   font-size: 20px;
   font-weight: 400;
   text-align: center;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 
 .profile-span-hover {
