--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.css";
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* ---------- Go Back ---------- */
 .go-back-top {
@@ -25,7 +26,8 @@
 }
 
 .section-h1 {
-  font-family: Open Sans;
+  font-family: 'Open Sans',
+    sans-serif;
   color: #4d4d4d;
   font-size: 35px;
 }
@@ -42,7 +44,7 @@
 .section-h3 {
   margin-bottom: 20px;
   font-size: 16px;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   color: #707070;
 }
@@ -90,7 +92,7 @@
 
 .section-div-half-right {
   letter-spacing: -2px;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 30px;
@@ -131,7 +133,7 @@
 
 .edit-text-span-middle.right {
   letter-spacing: -2px;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 30px;
@@ -264,7 +266,7 @@
 .protag-h1 {
   font-size: 35px;
   color: #4d4d4d;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   margin-bottom: 5px;
 }
 
@@ -299,7 +301,7 @@
 
 .protag-h3.title {
   color: #707070;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   font-size: 14px;
 }
@@ -335,7 +337,7 @@
 
 .crisis-left-span {
   letter-spacing: -2px;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 27px;
@@ -380,7 +382,7 @@
 
 .protag-span-left {
   color: #000000;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 26px;
@@ -392,7 +394,7 @@
 
 .last-span-left {
   color: #000000;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 26px;
@@ -501,7 +503,7 @@
 }
 
 .creamos-span-fabiola {
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: bold;
   font-size: 30px;
@@ -570,7 +572,7 @@
 }
 
 .opinamos-h1 {
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   color: #4d4d4d;
   font-size: 35px;
 }
@@ -578,7 +580,7 @@
 .opinamos-h2 {
   font-size: 20px;
   color: #707070;
-  font-family: Open Sans;
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   margin-bottom: 20px;
 }
