--- a/src/App.css
+++ b/src/App.css
@@ -934,7 +934,7 @@ li {
 .subscribe-h2 {
   font-weight: bold;
   font-size: 2em;
-  margin: 10px 0px;
+  margin: 25px 0px 10px;
 }
 
 .subscribe-form {
