--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -104,6 +104,8 @@
 }
 
 .section-div-half-left {
+  font-family: "Roboto",
+    sans-serif;
   text-align: justify;
   color: #000000;
   padding: 0px 10px;
