--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -291,7 +291,7 @@
   font-size: 25px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
-  color: #000000;
+  color: #4b8241;
 }
 
 .protag-h3 {
