--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -454,10 +454,10 @@
   margin-bottom: 5px;
 }
 
-​ .creamos-h3-micro {
+​.creamos-h3-micro-autor {
   color: #000000;
   font-family: "Roboto", sans-serif;
-  font-size: 18px;
+  font-size: 11px;
   font-style: italic !important;
   font-weight: lighter;
 }
@@ -478,7 +478,7 @@
   color: #000000;
   text-align: justify;
   font-size: 18px;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 }
 
 .creamos-div-img {
