--- a/src/components/Magazine/Magazine.css
+++ b/src/components/Magazine/Magazine.css
@@ -485,7 +485,7 @@
   width: 100%;
   height: auto;
   margin-bottom: 50px;
-  padding-bottom: 80px;
+  padding: 30px 0px 70px;
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #d969d966;
