--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,6 @@ li {
 
 .home-video {
   background-color: #630164;
-  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -750,7 +749,7 @@ li {
 /* ---------- Profiles ---------- */
 
 .profile {
-  width: 100%;
+  width: 103vw;
   height: auto;
   padding-top: 40px;
 }
@@ -863,9 +862,11 @@ li {
 
 .profile-h3 {
   padding-top: 10px;
+  font-weight: bold;
 }
 
 .profile-h3, .profile-span-x {
+  font-family: "Roboto", sans-serif;
   margin-bottom: 0px;
   display: flex;
   justify-content: center !important;
@@ -1049,12 +1050,19 @@ li {
 /* ------------------------ Media Queries ------------------------ */
 
 @media only screen and (max-width: 880px) {
+  /* ------ Header ------ */
   .header-social-media-div {
     display: none;
   }
   .header-img-anlogo {
     width: 70px;
     margin: 15px 0px 15px 20px;
+  }
+  /* ------ Home ------ */
+  .home-info-img {
+    width: 70%;
+    height: auto;
+    margin-left: 70px;
   }
   /* ------ AboutUs ------ */
   .about-us-span-us {
@@ -1076,14 +1084,26 @@ li {
     font-size: 1.8vw;
     width: 86%;
   }
+  /* ------ Profiles ------ */
+  .profile-body {
+    padding: 30px 60px 0px;
+  }
+  .profile-div {
+    margin: 0px 8px;
+  }
 }
 
 @media only screen and (max-width: 720px) {
+  /* ------ Home ------ */
+  .home {
+    padding: 110px 10px 50px;
+  }
+  .home-video {
+    padding: 30px 0px;
+  }
   /* ------ AboutUs ------ */
   .about-us-h2, .about-us-h4 {
-    font-size: 1.6em;
-    display: flex;
-    justify-content: center;
+    font-size: 1.8em;
   }
   .about-us-img {
     padding: 0px 15vw 0px 20vw;
@@ -1107,9 +1127,46 @@ li {
   .about-us-title-logo {
     height: 180px;
   }
+  /* ------ Profiles ------ */
+  .profile-body {
+    padding: 30px 50px 0px;
+    flex-direction: column;
+  }
+  .profile-div {
+    margin: 0px;
+    position: relative;
+  }
+  .profile-img-div {
+    height: 750px;
+    position: relative;
+    padding: 5px;
+  }
+  .profile-text-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 65px;
+  }
+  .profile-h3 {
+    text-transform: uppercase;
+  }
+  .profile-h3, .profile-span-x {
+    font-size: 4vw;
+    color: #f6f6f6;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  /* ------ Home ------ */
+  .home-info-img {
+    width: 75%;
+    height: auto;
+    margin-left: 60px;
+  }
+  .home-video {
+    padding: 15px;
+  }
   /* ------ AboutUs ------ */
   .about-us-h2, .about-us-h4 {
     font-size: 1.5em;
@@ -1142,16 +1199,41 @@ li {
   .about-us-title-logo {
     height: 150px;
   }
+  /* ------ Profiles ------ */
+  .profile-body {
+    padding: 30px 40px;
+  }
+  .profile-img-div {
+    height: 550px;
+  }
+  .profile-text-div {
+    bottom: 40px;
+  }
 }
 
 @media only screen and (max-width: 490px) {
+  /* ------ Home ------ */
+  .home {
+    padding: 100px 10px 50px;
+  }
+  .home-cover-img {
+    width: 80vw;
+  }
+  .home-info-img {
+    width: 90vw;
+    height: auto;
+    margin-left: 50px;
+  }
   /* ------ AboutUs ------ */
   .about-us-h2, .about-us-h4 {
-    font-size: 1.6em;
+    font-size: 1.5em;
     text-align: center;
   }
   .about-us-h4 {
     margin-bottom: 20px;
+  }
+  .about-us-img {
+    padding: 0px 1vw 0px 5vw;
   }
   .about-us-img-div {
     padding: 60px 10px 15px;
@@ -1159,7 +1241,7 @@ li {
   .about-us-span-us {
     padding-left: 50px;
     padding-right: 50px;
-    font-size: 4.5vw;
+    font-size: 4.3vw;
   }
   .about-us-span.date {
     padding: 0px 0px;
@@ -1171,7 +1253,39 @@ li {
   .about-us-title-logo {
     height: 120px;
   }
+  .about-us-span-container {
+    width: 20%;
+  }
   .about-us-span-text {
+    width: 80%;
     font-size: 2.5vw;
+  }
+  /* ------ Profiles ------ */
+  .profile-body {
+    padding: 30px 25px;
+  }
+  .profile-img-div {
+    height: 400px;
+  }
+  .profile-text-div {
+    bottom: 20px;
+  }
+  .profile-span {
+    padding: 0px 30px;
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  /* ------ AboutUs ------ */
+  .about-us-h2, .about-us-h4 {
+    font-size: 1.3em;
+  }
+  .how-work {
+    padding: 0px 10px;
+  }
+  /* ------ Profiles ------ */
+  .profile-span {
+    font-size: 14px;
   }
 }
